--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@lenic/loop",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "用于在 JavaScript 中异步、并行执行某些操作。",
   "main": "lib/index.js",
+  "module": "lib/index.es.js",
   "typings": "lib/index.d.ts",
   "files": [
     "lib"
@@ -12,7 +13,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "build": "tsc"
+    "prepublishOnly": "npm run build",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -36,6 +38,12 @@
   },
   "homepage": "https://github.com/Lenic/loop#readme",
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "rollup": "^2.45.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.2.4"
   }
 }
