--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "declaration": true,
     "noImplicitAny": false,
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "esnext",
     "target": "es5",
     "lib": ["es2015", "dom"]
   },
