--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lenic/loop",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "用于在 JavaScript 中异步、并行执行某些操作。",
   "main": "lib/index.js",
   "module": "lib/index.es.js",
@@ -38,12 +38,13 @@
   },
   "homepage": "https://github.com/Lenic/loop#readme",
   "devDependencies": {
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "rollup": "^2.45.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "typescript": "^4.2.4"
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "rollup": "^2.75.6",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.3"
   }
 }
